--- a/testes.ipynb
+++ b/testes.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "'7u0dXAiOq8hinHsl'"
+       "'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN0d2tpc3B1cXhlYmtsY3J3eG5hIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0ODc5NTI0MiwiZXhwIjoyMDY0MzcxMjQyfQ.72iNARifWXEMI5JhsklGPwKd1u-16PI6mZwJdlISqBo'"
       ]
      },
      "execution_count": 3,
@@ -41,13 +41,372 @@
     }
    ],
    "source": [
-    "os.getenv('DB_PASSWORD')"
+    "os.environ[\"SUPABASE_SERVICE_ROLE_KEY\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "07efb431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token JWT: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxIiwidXNlcl9pZCI6MSwicm9sZSI6ImF1dGhlbnRpY2F0ZWQiLCJleHAiOjE3NDk1ODM2Mjl9.Fuh5cwCJYbNSPlniJWI8uNXhczdJBOy_xXk-SrCKdWM\n",
+      "Status: 403\n",
+      "{\"code\":\"42501\",\"details\":null,\"hint\":null,\"message\":\"permission denied for table core_transaction\"}\n",
+      "Headers usados: {'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxIiwidXNlcl9pZCI6MSwicm9sZSI6ImF1dGhlbnRpY2F0ZWQiLCJleHAiOjE3NDk1ODM2Mjl9.Fuh5cwCJYbNSPlniJWI8uNXhczdJBOy_xXk-SrCKdWM', 'apikey': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN0d2tpc3B1cXhlYmtsY3J3eG5hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg3OTUyNDIsImV4cCI6MjA2NDM3MTI0Mn0.v5var2Qd0S7NRji4dL9623jRwuJFzqV_MplS1y6YNYI', 'Accept': 'application/json'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "from core.utils.supabase_jwt import generate_supabase_jwt\n",
+    "\n",
+    "# 1. Gera o token para o utilizador com ID 1\n",
+    "token = generate_supabase_jwt(1)\n",
+    "print(\"Token JWT:\", token)\n",
+    "\n",
+    "# 2. Define o endpoint da tabela protegida\n",
+    "url = os.environ[\"SUPABASE_REST_URL\"] + \"/core_transaction\"\n",
+    "\n",
+    "# 3. Prepara os headers com o JWT e a API key (normalmente a anon key)\n",
+    "headers = {\n",
+    "    \"Authorization\": f\"Bearer {token}\",\n",
+    "    \"apikey\": os.environ[\"SUPABASE_API_KEY\"],\n",
+    "    \"Accept\": \"application/json\"\n",
+    "}\n",
+    "\n",
+    "# 4. Faz a chamada GET autenticada\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "# 5. Mostra o resultado\n",
+    "print(\"Status:\", response.status_code)\n",
+    "print(response.text[:500])  # imprime só os primeiros 500 caracteres, opcional\n",
+    "print(\"Headers usados:\", headers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8e712d65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token JWT: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxIiwidXNlcl9pZCI6MSwicm9sZSI6ImF1dGhlbnRpY2F0ZWQiLCJpYXQiOjE3NDk1ODgzNDQsImV4cCI6MTc0OTU5MTk0NH0.2MpriivAm0uuA0maEsZdM7R4GPZDZso19OFXmNz4GFM\n",
+      "Status: 200\n",
+      "[{\"year\":2025,\"month\":1,\"account\":\"BPI\",\"balance\":1519.00}, \n",
+      " {\"year\":2025,\"month\":2,\"account\":\"BPI\",\"balance\":1619.00}, \n",
+      " {\"year\":2025,\"month\":3,\"account\":\"BPI\",\"balance\":1719.00}, \n",
+      " {\"year\":2025,\"month\":4,\"account\":\"BPI\",\"balance\":1819.00}, \n",
+      " {\"year\":2025,\"month\":5,\"account\":\"BPI\",\"balance\":1919.00}, \n",
+      " {\"year\":2025,\"month\":6,\"account\":\"BPI\",\"balance\":2019.00}, \n",
+      " {\"year\":2025,\"month\":7,\"account\":\"BPI\",\"balance\":2119.00}, \n",
+      " {\"year\":2025,\"month\":8,\"account\":\"BPI\",\"balance\":2219.00}, \n",
+      " {\"year\":202\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "from core.utils.supabase_jwt import generate_supabase_jwt\n",
+    "\n",
+    "token = generate_supabase_jwt(1)\n",
+    "print(\"Token JWT:\", token)\n",
+    "\n",
+    "url = os.environ[\"SUPABASE_URL\"] + \"/rest/v1/rpc/get_account_balances\"\n",
+    "headers = {\n",
+    "    \"Authorization\": f\"Bearer {token}\",\n",
+    "    \"apikey\": os.environ[\"SUPABASE_API_KEY\"],\n",
+    "    \"Accept\": \"application/json\"\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, headers=headers, json={})  # POST vazio para RPC\n",
+    "print(\"Status:\", response.status_code)\n",
+    "print(response.text[:500])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f804f353",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from core.utils.supabase_rpc import call_rpc\n",
+    "data = call_rpc(user_id=3, fn_name=\"get_account_balances\")\n",
+    "print(data[:3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8a59403",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "from core.utils.supabase_jwt import generate_supabase_jwt\n",
+    "\n",
+    "token = generate_supabase_jwt(1)\n",
+    "print(\"Token JWT:\", token)\n",
+    "\n",
+    "url = os.environ[\"SUPABASE_URL\"] + \"/rest/v1/rpc/get_my_transactions\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"Authorization\": f\"Bearer {token}\",\n",
+    "    \"apikey\": os.environ[\"SUPABASE_API_KEY\"],\n",
+    "    \"Accept\": \"application/json\"\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, headers=headers, json={})  # POST vazio para RPC\n",
+    "print(\"Status:\", response.status_code)\n",
+    "print(response.text[:500])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e262c630",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8000/reporting/data.csv?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxIiwidXNlcl9pZCI6MSwicm9sZSI6ImF1dGhlbnRpY2F0ZWQiLCJleHAiOjE3NDk1ODMwMDJ9.eiQuRiG0jOFYoC5UcgcUrDn5drv476atxiaDeB8Jjus\n"
+     ]
+    }
+   ],
+   "source": [
+    "from core.utils.supabase_jwt import generate_supabase_jwt\n",
+    "\n",
+    "token = generate_supabase_jwt(1)\n",
+    "print(f\"http://localhost:8000/reporting/data.csv?token={token}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "134a9d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sub': '1', 'user_id': 1, 'role': 'authenticated', 'exp': 1749581993}\n"
+     ]
+    }
+   ],
+   "source": [
+    "token = generate_supabase_jwt(1)\n",
+    "import jwt\n",
+    "print(jwt.decode(token, options={\"verify_signature\": False}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d9d6700e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxIiwidXNlcl9pZCI6MSwicm9sZSI6ImF1dGhlbnRpY2F0ZWQiLCJleHAiOjE3NDk1ODE5OTB9.QD71APmL1gbZKOmAcgqF_BFemr_odi40y684c1076Vs'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from core.utils.supabase_jwt import generate_supabase_jwt\n",
+    "token = generate_supabase_jwt(1)  # ID do usuário\n",
+    "token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f0ee0fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔄 Iniciando teste de conexão com Supabase...\n",
+      "🔑 Gerando token JWT...\n",
+      "🌐 Testando endpoint: https://stwkispuqxebklcrwxna.supabase.co/auth/v1/user\n",
+      "❌ Erro na requisição: 403 Client Error: Forbidden for url: https://stwkispuqxebklcrwxna.supabase.co/auth/v1/user\n",
+      "\n",
+      "🔧 Solução de problemas:\n",
+      "1. Verifique se todas as variáveis estão no .env\n",
+      "2. Confira se os valores estão corretos (copie do painel Supabase)\n",
+      "3. Teste manualmente com curl:\n",
+      "   curl -H \"apikey: SUA_CHAVE\" -H \"Authorization: Bearer SEU_TOKEN\" \"https://stwkispuqxebklcrwxna.supabase.co/auth/v1/user\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import jwt\n",
+    "import base64\n",
+    "from datetime import datetime, timedelta, timezone\n",
+    "from dotenv import load_dotenv\n",
+    "import requests\n",
+    "\n",
+    "# Carrega variáveis do .env\n",
+    "load_dotenv()\n",
+    "\n",
+    "def get_required_env(var_name: str) -> str:\n",
+    "    \"\"\"Obtém variável de ambiente obrigatória\"\"\"\n",
+    "    value = os.getenv(var_name)\n",
+    "    if not value:\n",
+    "        raise ValueError(f\"❌ Variável {var_name} não encontrada no .env\")\n",
+    "    return value\n",
+    "\n",
+    "def generate_supabase_jwt(user_id: int) -> str:\n",
+    "    \"\"\"Gera JWT válido para autenticação no Supabase\"\"\"\n",
+    "    try:\n",
+    "        # Obtém e decodifica o segredo JWT\n",
+    "        jwt_secret = get_required_env(\"SUPABASE_JWT_SECRET\")\n",
+    "        decoded_secret = base64.b64decode(jwt_secret)\n",
+    "        \n",
+    "        # Cria payload com campos obrigatórios\n",
+    "        payload = {\n",
+    "            \"iss\": \"supabase\",\n",
+    "            \"aud\": \"authenticated\",\n",
+    "            \"sub\": str(user_id),\n",
+    "            \"role\": \"authenticated\",\n",
+    "            \"exp\": datetime.now(timezone.utc) + timedelta(hours=1)\n",
+    "        }\n",
+    "        \n",
+    "        return jwt.encode(payload, decoded_secret, algorithm=\"HS256\")\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        raise RuntimeError(f\"Erro ao gerar token JWT: {str(e)}\")\n",
+    "\n",
+    "def test_supabase_api():\n",
+    "    \"\"\"Testa a conexão com a API do Supabase\"\"\"\n",
+    "    try:\n",
+    "        print(\"🔄 Iniciando teste de conexão com Supabase...\")\n",
+    "        \n",
+    "        # Obtém variáveis obrigatórias\n",
+    "        supabase_url = get_required_env(\"SUPABASE_URL\")\n",
+    "        api_key = get_required_env(\"SUPABASE_API_KEY\")\n",
+    "        \n",
+    "        # Gera token\n",
+    "        print(\"🔑 Gerando token JWT...\")\n",
+    "        token = generate_supabase_jwt(1)\n",
+    "        \n",
+    "        # Configura requisição\n",
+    "        headers = {\n",
+    "            \"Authorization\": f\"Bearer {token}\",\n",
+    "            \"apikey\": api_key,\n",
+    "            \"Content-Type\": \"application/json\"\n",
+    "        }\n",
+    "        \n",
+    "        # Usa um endpoint seguro para teste\n",
+    "        endpoint = f\"{supabase_url}/auth/v1/user\"\n",
+    "        print(f\"🌐 Testando endpoint: {endpoint}\")\n",
+    "        \n",
+    "        # Faz a requisição\n",
+    "        response = requests.get(endpoint, headers=headers)\n",
+    "        response.raise_for_status()\n",
+    "        \n",
+    "        print(\"✅ Conexão bem-sucedida!\")\n",
+    "        return response.json()\n",
+    "    \n",
+    "    except requests.exceptions.RequestException as e:\n",
+    "        error_msg = f\"❌ Erro na requisição: {str(e)}\"\n",
+    "        if e.response:\n",
+    "            error_msg += f\"\\n📄 Resposta do servidor ({e.response.status_code}): {e.response.text[:200]}\"\n",
+    "        print(error_msg)\n",
+    "    except Exception as e:\n",
+    "        print(f\"⛔ Erro inesperado: {str(e)}\")\n",
+    "    \n",
+    "    return None\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    result = test_supabase_api()\n",
+    "    \n",
+    "    if result:\n",
+    "        print(\"\\n📋 Dados recebidos:\")\n",
+    "        print(result)\n",
+    "    else:\n",
+    "        print(\"\\n🔧 Solução de problemas:\")\n",
+    "        print(\"1. Verifique se todas as variáveis estão no .env\")\n",
+    "        print(\"2. Confira se os valores estão corretos (copie do painel Supabase)\")\n",
+    "        print(\"3. Teste manualmente com curl:\")\n",
+    "        print(f'   curl -H \"apikey: SUA_CHAVE\" -H \"Authorization: Bearer SEU_TOKEN\" \"{get_required_env(\"SUPABASE_URL\")}/auth/v1/user\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "139440ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxIiwidXNlcl9pZCI6MSwicm9sZSI6ImF1dGhlbnRpY2F0ZWQiLCJleHAiOjE3NDk1ODEwNzh9.tzTp3r0FFuE6gPepo0hkT2zOZ7Wx9VGlZrQiHvlx1TE'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "86d3aa3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧾 Payload: {'sub': '1', 'user_id': 1, 'role': 'authenticated', 'exp': 1749582358}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jwt\n",
+    "\n",
+    "decoded = jwt.decode(token, options={\"verify_signature\": False})\n",
+    "print(\"🧾 Payload:\", decoded)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ourfinancetracker",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
