--- a/testes.ipynb
+++ b/testes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9dd80b28",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,6 +21,127 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "71fbe5ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project root: c:\\Users\\nunov\\ourfinancetracker\n",
+      "Django setup complete.\n",
+      "{'DEBUG': True,\n",
+      " 'DEFAULT_FROM_EMAIL': 'OurFinanceTracker <noreply@ourfinancetracker.com>',\n",
+      " 'EMAIL_BACKEND': 'django.core.mail.backends.smtp.EmailBackend',\n",
+      " 'EMAIL_HOST': 'mail.ourfinancetracker.com',\n",
+      " 'EMAIL_HOST_USER': 'noreply@ourfinancetracker.com',\n",
+      " 'EMAIL_LINK_DOMAIN': 'ourfinancetracker.com',\n",
+      " 'EMAIL_PORT': 587,\n",
+      " 'EMAIL_TIMEOUT': 20,\n",
+      " 'EMAIL_USE_TLS': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ⚙️ Parameters — change as needed\n",
+    "RECIPIENT = \"nveiga743@gmail.com\"   # Where to send test emails\n",
+    "PROJECT_ROOT = None  # Path that contains manage.py (e.g., \"/home/runner/workspace\"). If None, auto-detect.\n",
+    "DJANGO_SETTINGS_MODULE = \"ourfinancetracker_site.settings\"  # Adjust only if your settings module has a different path\n",
+    "USE_HTTPS = True  # Controls protocol in password reset email\n",
+    "\n",
+    "# Optional override for link domain in password reset emails (falls back to EMAIL_LINK_DOMAIN or request.get_host)\n",
+    "DOMAIN_OVERRIDE = None  # e.g., \"www.ourfinancetracker.com\"\n",
+    "\n",
+    "import os, sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_manage_py(start: Path) -> Path | None:\n",
+    "    cur = start\n",
+    "    for _ in range(6):  # walk up a few levels\n",
+    "        cand = cur / \"manage.py\"\n",
+    "        if cand.exists():\n",
+    "            return cand\n",
+    "        cur = cur.parent\n",
+    "    return None\n",
+    "\n",
+    "# Auto-detect PROJECT_ROOT if not provided\n",
+    "if PROJECT_ROOT is None:\n",
+    "    mp = find_manage_py(Path.cwd())\n",
+    "    if not mp:\n",
+    "        raise RuntimeError(\"Could not find manage.py. Set PROJECT_ROOT manually in the parameters cell.\")\n",
+    "    PROJECT_ROOT = str(mp.parent)\n",
+    "\n",
+    "print(\"Project root:\", PROJECT_ROOT)\n",
+    "if PROJECT_ROOT not in sys.path:\n",
+    "    sys.path.insert(0, PROJECT_ROOT)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", DJANGO_SETTINGS_MODULE)\n",
+    "\n",
+    "import django\n",
+    "django.setup()\n",
+    "print(\"Django setup complete.\")\n",
+    "from django.conf import settings\n",
+    "from pprint import pprint\n",
+    "\n",
+    "info = {\n",
+    "    \"EMAIL_BACKEND\": getattr(settings, \"EMAIL_BACKEND\", None),\n",
+    "    \"DEFAULT_FROM_EMAIL\": getattr(settings, \"DEFAULT_FROM_EMAIL\", None),\n",
+    "    \"EMAIL_HOST\": getattr(settings, \"EMAIL_HOST\", None),\n",
+    "    \"EMAIL_PORT\": getattr(settings, \"EMAIL_PORT\", None),\n",
+    "    \"EMAIL_USE_TLS\": getattr(settings, \"EMAIL_USE_TLS\", None),\n",
+    "    \"EMAIL_HOST_USER\": getattr(settings, \"EMAIL_HOST_USER\", None),\n",
+    "    \"EMAIL_TIMEOUT\": getattr(settings, \"EMAIL_TIMEOUT\", None),\n",
+    "    \"EMAIL_LINK_DOMAIN\": getattr(settings, \"EMAIL_LINK_DOMAIN\", None),\n",
+    "    \"DEBUG\": settings.DEBUG,\n",
+    "}\n",
+    "pprint(info)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8ac6c832",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backend: django.core.mail.backends.smtp.EmailBackend\n",
+      "From: OurFinanceTracker <noreply@ourfinancetracker.com>\n",
+      "SENT count: 1\n",
+      "✅ If SENT count is 1, check the recipient inbox (and Spam).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from django.core.mail import send_mail\n",
+    "from django.conf import settings\n",
+    "\n",
+    "subject = \"OurFinanceTracker – smoke test\"\n",
+    "body = \"If you received this, your email settings are working.\"\n",
+    "\n",
+    "print(\"Backend:\", settings.EMAIL_BACKEND)\n",
+    "print(\"From:\", settings.DEFAULT_FROM_EMAIL)\n",
+    "\n",
+    "try:\n",
+    "    sent = send_mail(\n",
+    "        subject,\n",
+    "        body,\n",
+    "        settings.DEFAULT_FROM_EMAIL,\n",
+    "        [RECIPIENT],\n",
+    "        fail_silently=False,  # be loud in tests\n",
+    "    )\n",
+    "    print(\"SENT count:\", sent)\n",
+    "    print(\"✅ If SENT count is 1, check the recipient inbox (and Spam).\")\n",
+    "except Exception as e:\n",
+    "    print(\"❌ Exception during send_mail:\", e)\n",
+    "    raise\n"
    ]
   },
   {
@@ -406,7 +527,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv (3.12.7)",
    "language": "python",
    "name": "python3"
   },
